--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,30 @@ input {
 input:focus {
   outline: none;
 }
+
+.grid-card {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.card {
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin: 10px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.card p {
+  padding: 5px;
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
